upload Sản Phẩm

--- a/ProjectCDTT_63132701/ProjectCDTT_63132701.csproj
+++ b/ProjectCDTT_63132701/ProjectCDTT_63132701.csproj
@@ -216,6 +216,7 @@
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\dichvu.css" />
+    <Content Include="Content\giohang.css" />
     <Content Include="Content\Home.css" />
     <Content Include="Content\rootcss.css" />
     <Content Include="Content\sanpham.css" />
@@ -234,10 +235,43 @@
     <Content Include="Images\bia3.jpg" />
     <Content Include="Images\bia4.jpg" />
     <Content Include="Images\bongtai1.jpg" />
+    <Content Include="Images\bongtai10.jpg" />
+    <Content Include="Images\bongtai11.jpg" />
+    <Content Include="Images\bongtai12.jpg" />
+    <Content Include="Images\bongtai13.jpg" />
+    <Content Include="Images\bongtai14.jpg" />
+    <Content Include="Images\bongtai15.jpg" />
+    <Content Include="Images\bongtai16.jpg" />
+    <Content Include="Images\bongtai2.jpg" />
+    <Content Include="Images\bongtai3.jpg" />
+    <Content Include="Images\bongtai4.jpg" />
+    <Content Include="Images\bongtai5.jpg" />
+    <Content Include="Images\bongtai6.jpg" />
+    <Content Include="Images\bongtai7.jpg" />
+    <Content Include="Images\bongtai8.jpg" />
+    <Content Include="Images\bongtai9.jpg" />
     <Content Include="Images\daychuyen1.jpg" />
+    <Content Include="Images\daychuyen10.jpg" />
+    <Content Include="Images\daychuyen11.jpg" />
+    <Content Include="Images\daychuyen12.jpg" />
+    <Content Include="Images\daychuyen13.jpg" />
+    <Content Include="Images\daychuyen14.jpg" />
+    <Content Include="Images\daychuyen15.jpg" />
+    <Content Include="Images\daychuyen16.jpg" />
+    <Content Include="Images\daychuyen17.jpg" />
+    <Content Include="Images\daychuyen18.jpg" />
+    <Content Include="Images\daychuyen19.jpg" />
+    <Content Include="Images\daychuyen20.jpg" />
+    <Content Include="Images\daychuyen21.jpg" />
+    <Content Include="Images\daychuyen22.jpg" />
+    <Content Include="Images\daychuyen23.jpg" />
     <Content Include="Images\daychuyen3.jpg" />
     <Content Include="Images\daychuyen4.jpg" />
     <Content Include="Images\daychuyen5.jpg" />
+    <Content Include="Images\daychuyen6.jpg" />
+    <Content Include="Images\daychuyen7.jpg" />
+    <Content Include="Images\daychuyen8.jpg" />
+    <Content Include="Images\daychuyen9.jpg" />
     <Content Include="Images\duychuyen2.jpg" />
     <Content Include="Images\logo.png" />
     <Content Include="Images\mau0.jpg" />
@@ -255,13 +289,27 @@
     <Content Include="Images\mau4.jpg" />
     <Content Include="Images\mau5.jpg" />
     <Content Include="Images\mau6.jpg" />
-    <Content Include="Images\mau7.jpg" />
     <Content Include="Images\mau8.jpg" />
     <Content Include="Images\mau9.jpg" />
     <Content Include="Images\nhan1.jpg" />
     <Content Include="Images\nhan10.jpg" />
     <Content Include="Images\nhan11.jpg" />
+    <Content Include="Images\nhan12.jpg" />
+    <Content Include="Images\nhan13.jpg" />
+    <Content Include="Images\nhan14.jpg" />
+    <Content Include="Images\nhan15.jpg" />
+    <Content Include="Images\nhan16.jpg" />
+    <Content Include="Images\nhan17.jpg" />
+    <Content Include="Images\nhan18.jpg" />
+    <Content Include="Images\nhan19.jpg" />
     <Content Include="Images\nhan2.jpg" />
+    <Content Include="Images\nhan20.jpg" />
+    <Content Include="Images\nhan21.jpg" />
+    <Content Include="Images\nhan22.jpg" />
+    <Content Include="Images\nhan23.jpg" />
+    <Content Include="Images\nhan24.jpg" />
+    <Content Include="Images\nhan25.jpg" />
+    <Content Include="Images\nhan26.jpg" />
     <Content Include="Images\nhan3.jpg" />
     <Content Include="Images\nhan4.jpg" />
     <Content Include="Images\nhan5.jpg" />
@@ -273,10 +321,23 @@
     <Content Include="Images\shop2.jpg" />
     <Content Include="Images\shop3.jpg" />
     <Content Include="Images\shop4.jpg" />
+    <Content Include="Images\vongtai12.jpg" />
     <Content Include="Images\vongtay1.jpg" />
+    <Content Include="Images\vongtay10.jpg" />
+    <Content Include="Images\vongtay11.jpg" />
+    <Content Include="Images\vongtay12.jpg" />
+    <Content Include="Images\vongtay13.jpg" />
+    <Content Include="Images\vongtay14.jpg" />
+    <Content Include="Images\vongtay15.jpg" />
+    <Content Include="Images\vongtay16.jpg" />
     <Content Include="Images\vongtay2.jpg" />
     <Content Include="Images\vongtay3.jpg" />
     <Content Include="Images\vongtay4.jpg" />
+    <Content Include="Images\vongtay5.jpg" />
+    <Content Include="Images\vongtay6.jpg" />
+    <Content Include="Images\vongtay7.jpg" />
+    <Content Include="Images\vongtay8.jpg" />
+    <Content Include="Images\vongtay9.jpg" />
     <Content Include="Models\Model_63132701.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model_63132701.edmx</DependentUpon>
@@ -345,7 +406,6 @@
     <Content Include="Views\tai_khoan\Details.cshtml" />
     <Content Include="Views\tai_khoan\Edit.cshtml" />
     <Content Include="Views\tai_khoan\Index.cshtml" />
-    <Content Include="Views\San_pham\Lac_Tay.cshtml" />
     <Content Include="Views\San_pham\Day_Chuyen.cshtml" />
     <Content Include="Views\San_pham\Bong_Tai.cshtml" />
     <Content Include="Views\shared\_LayoutAdmin.cshtml" />
@@ -366,6 +426,8 @@
     <Content Include="Views\Van_chuyen\Index.cshtml" />
     <Content Include="Views\Don_hang\QLDH.cshtml" />
     <Content Include="Views\Van_chuyen\QLVC.cshtml" />
+    <Content Include="Views\San_pham\Lac_Tay.cshtml" />
+    <Content Include="Views\San_pham\ChiTietSanPham.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
