--- a/ProjectCDTT_63132701/Web.config
+++ b/ProjectCDTT_63132701/Web.config
@@ -61,7 +61,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="Project_63132701Entities2" connectionString="metadata=res://*/Models.Model_63132701.csdl|res://*/Models.Model_63132701.ssdl|res://*/Models.Model_63132701.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DELL\SQLEXPRESS;initial catalog=Project_63132701;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Project_63132701Entities2" connectionString="metadata=res://*/Models.Model_63132701.csdl|res://*/Models.Model_63132701.ssdl|res://*/Models.Model_63132701.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MSI\SQLEXPRESS;initial catalog=Project_63132701;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> 
   </connectionStrings>
   <entityFramework>
     <providers>
