create, edit, details,delate

--- a/ProjectCDTT_63132701/ProjectCDTT_63132701.csproj
+++ b/ProjectCDTT_63132701/ProjectCDTT_63132701.csproj
@@ -224,6 +224,7 @@
     <Content Include="Content\Home.css" />
     <Content Include="Content\khuyenmai.css" />
     <Content Include="Content\login.css" />
+    <Content Include="Content\qlsp.css" />
     <Content Include="Content\rootcss.css" />
     <Content Include="Content\sanpham.css" />
     <Content Include="Content\Style.css" />
@@ -449,6 +450,7 @@
     <Folder Include="Areas\Admin\Controllers\" />
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Views\Shared\" />
+    <Folder Include="Content\images\" />
     <Folder Include="Views\account\" />
   </ItemGroup>
   <ItemGroup>
