--- a/ProjectCDTT_63132701/ProjectCDTT_63132701.csproj
+++ b/ProjectCDTT_63132701/ProjectCDTT_63132701.csproj
@@ -155,6 +155,9 @@
     <Compile Include="Models\DonHang.cs">
       <DependentUpon>Model_63132701.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\GiaVanChuyen.cs">
+      <DependentUpon>Model_63132701.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\GioHang.cs">
       <DependentUpon>Model_63132701.tt</DependentUpon>
     </Compile>
