--- a/ProjectCDTT_63132701/ProjectCDTT_63132701.csproj
+++ b/ProjectCDTT_63132701/ProjectCDTT_63132701.csproj
@@ -221,6 +221,7 @@
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\chitietsanpham.css" />
     <Content Include="Content\create.css" />
+    <Content Include="Content\delete.css" />
     <Content Include="Content\details.css" />
     <Content Include="Content\dichvu.css" />
     <Content Include="Content\giohang.css" />
