add hóa đơn, add tìm kiếm

--- a/ProjectCDTT_63132701/ProjectCDTT_63132701.csproj
+++ b/ProjectCDTT_63132701/ProjectCDTT_63132701.csproj
@@ -469,6 +469,7 @@
     <Content Include="Views\San_pham\BaoHanh.cshtml" />
     <Content Include="Views\San_pham\TTVanChuyen.cshtml" />
     <Content Include="Views\San_pham\LoaiBac.cshtml" />
+    <Content Include="Views\San_pham\HoaDon.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
