cập nhật confirm modal và toastr

--- a/ProjectCDTT_63132701/ProjectCDTT_63132701.csproj
+++ b/ProjectCDTT_63132701/ProjectCDTT_63132701.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Models\KhachHang.cs">
       <DependentUpon>Model_63132701.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\KhachHangMetadata.cs" />
     <Compile Include="Models\LichSuTruyCap.cs">
       <DependentUpon>Model_63132701.tt</DependentUpon>
     </Compile>
